Lisätty ascii myös seuraava junaan