@@ -25,7 +25,7 @@ public class SeuraavaJuna {
 
         try {
 //Syötetään hakuehdot URLiin/Sami
-            URL url = new URL(baseurl + "/live-trains/station/" + lAsema + "/" + kAsema + "?" + hakuehdot);
+            URL url = new URL(URI.create(baseurl + "/live-trains/station/" + lAsema + "/" + kAsema + "?" + hakuehdot).toASCIIString());
             ObjectMapper mapper = new ObjectMapper();
             CollectionType tarkempiListanTyyppi = mapper.getTypeFactory().constructCollectionType(ArrayList.class, Juna.class);
             List<Juna> junat = mapper.readValue(url, tarkempiListanTyyppi);  // pelkkä List.class ei riitä tyypiksi
